fix image max width on mobile

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -203,3 +203,12 @@ input[type="button"] {
     box-shadow: 0 0 20px -4px $green;
   }
 }
+
+.productDescription {
+  img {
+    @media (max-width: $screen-mobile) {
+      max-width: 320px !important;
+      width: 100%;
+    }
+  }
+}
